moved bad files to own folder and updated other scripts

--- a/wikipedia/wiki-to-yaml.ipynb
+++ b/wikipedia/wiki-to-yaml.ipynb
@@ -24,24 +24,24 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 305
+     "prompt_number": 401
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "people = []\n",
+      "names = []\n",
+      "data = []\n",
       "\n",
       "with open(\"people-list-copy.yaml\", \"r\") as yaml_file:\n",
       "    entries = yaml_file.read().splitlines()\n",
       "    \n",
       "    num = 0\n",
       "    for e in entries:\n",
-      "        people.append(e) #append names to list\n",
+      "        e.strip(\"- \")\n",
+      "        names.append(e) #append names to list\n",
       "        num += 1\n",
-      "    print num\n",
-      "for p in people:\n",
-      "    p.strip(\"- \")\n",
+      "#     print num\n",
       "\n",
       "#create dictionary to store whether source exists for the person\n",
       "val_keys = sources = [\"Wikipedia\", \"Center for Data Science NYU\"] #add to this as run each scraper\n",
@@ -50,28 +50,28 @@
       "all_d = []\n",
       "i = 0\n",
       "j = 0\n",
-      "for p in people[0:1]:\n",
-      "    d = {p: source_dict}\n",
+      "for n in names[0:1]:\n",
+      "    d = {n: source_dict}\n",
       "    all_d.append(d)\n",
       "    #print all_d  # e.g. {Paul Glimcher : {\"Wikipedia\": False, \"Center for Data Science NYU\": False}}\n",
       "    try:\n",
-      "        pageurl = urllib.urlopen(\"http://en.wikipedia.org/wiki/\" + p)        \n",
-      "        title = wikipedia.page(p)\n",
-      "        url = title.url\n",
+      "        pageurl = urllib.urlopen(\"http://en.wikipedia.org/wiki/\" + n)        \n",
+      "        title = wikipedia.page(n)\n",
       "        summary = title.summary\n",
       "        categs = title.categories\n",
       "        outlinks = title.links\n",
       "        sections = title.sections\n",
       "        refs = title.references\n",
-      "        content = title.content    # convert to strings ???\n",
-      "        image = title.images\n",
-      "#         if len(outlinks) > 0:\n",
-      "#             print outlinks\n",
+      "        content = title.content\n",
+      "        imageurl = title.images\n",
       "        # print p + \" has wiki\"\n",
       "    \n",
       "        #set wikipedia value in dictionary to true\n",
       "        source_dict.update({\"Wikipedia\":True})\n",
       "        i += 1\n",
+      "        data.append({'pageurl': str(pageurl), 'title': str(title), 'url': pageurl.read(), 'summary': str(summary),\n",
+      "                     'categories': str(categs), 'outlinks': str(outlinks),'sections': str(sections),\n",
+      "                     'references': refs,'content': content, 'imageurl': imageurl})\n",
       "        \n",
       "    except wikipedia.exceptions.DisambiguationError as e: #if reach this, they aren't on wikipedia\n",
       "        #print e.options \n",
@@ -82,7 +82,9 @@
       "#       print p + \" no wiki\"\n",
       "        pass\n",
       "\n",
-      "\n"
+      "with open(p + '-wiki.yaml', 'w') as outfile:\n",
+      "    outfile.write( yaml.dump(data, default_flow_style=False) )\n",
+      "    print \"finished!\"\n"
      ],
      "language": "python",
      "metadata": {},
@@ -91,11 +93,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "84\n"
+        "84\n",
+        "hereeee!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 350
+     "prompt_number": 403
     },
     {
      "cell_type": "code",
@@ -103,36 +113,12 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 316
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "#         page = \"http://en.wikipedia.org/wiki/\" + p\n",
-      "#         soup = BeautifulSoup(urllib.urlopen(page))\n",
-      "#         print soup.find_all(\"h3\")\n",
-      "\n",
-      "# try:\n",
-      "#     query = \"Paul Glimcher\"\n",
-      "#     url = urllib.urlopen(\"http://en.wikipedia.org/wiki/\" + query) #fetch page for topic\n",
-      "#     title = wikipedia.page(query)\n",
-      "#     print title\n",
-      "#     summary = title.summary\n",
-      "#     categ = title.categories\n",
-      "#     links = title.links\n",
-      "#     sections = title.sections\n",
-      "#     print \"sections: \" + sections\n",
-      "#     suggestions = title.suggest\n",
-      "#     print suggestions\n",
-      "#     content = title.content\n",
-      "#     print content\n",
-      "    \n",
-      "# except:\n",
-      "# #     print \"Page not found for \" + query + \". Try another query.\"\n",
-      "#      pass"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
