create folders for all people. need to edit content for entries in list bc not all files generate

--- a/wikipedia/wiki-to-yaml.ipynb
+++ b/wikipedia/wiki-to-yaml.ipynb
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 401
+     "prompt_number": 405
     },
     {
      "cell_type": "code",
@@ -40,17 +40,17 @@
       "    for e in entries:\n",
       "        e.strip(\"- \")\n",
       "        names.append(e) #append names to list\n",
+      "#create dictionary to store whether source exists for the person\n",
       "        num += 1\n",
       "#     print num\n",
       "\n",
-      "#create dictionary to store whether source exists for the person\n",
       "val_keys = sources = [\"Wikipedia\", \"Center for Data Science NYU\"] #add to this as run each scraper\n",
       "source_dict = dict(zip(val_keys, [False]*len(val_keys))) #set all values as false\n",
       "\n",
       "all_d = []\n",
       "i = 0\n",
       "j = 0\n",
-      "for n in names[0:1]:\n",
+      "for n in names[0:3]:\n",
       "    d = {n: source_dict}\n",
       "    all_d.append(d)\n",
       "    #print all_d  # e.g. {Paul Glimcher : {\"Wikipedia\": False, \"Center for Data Science NYU\": False}}\n",
@@ -62,17 +62,21 @@
       "        outlinks = title.links\n",
       "        sections = title.sections\n",
       "        refs = title.references\n",
-      "        content = title.content\n",
+      "        # content = title.content\n",
       "        imageurl = title.images\n",
       "        # print p + \" has wiki\"\n",
       "    \n",
       "        #set wikipedia value in dictionary to true\n",
       "        source_dict.update({\"Wikipedia\":True})\n",
       "        i += 1\n",
-      "        data.append({'pageurl': str(pageurl), 'title': str(title), 'url': pageurl.read(), 'summary': str(summary),\n",
-      "                     'categories': str(categs), 'outlinks': str(outlinks),'sections': str(sections),\n",
-      "                     'references': refs,'content': content, 'imageurl': imageurl})\n",
+      "        # data.append({'pageurl': str(pageurl), 'title': title, 'url': pageurl.read(), 'summary': str(summary),\n",
+      "        # 'categories': str(categs), 'outlinks': str(outlinks),'sections': str(sections),\n",
+      "        # 'references': refs,'content': content, 'imageurl': imageurl})\n",
       "        \n",
+      "        data.append({'title': title, 'summary': summary, 'url': 'http://en.wikipedia.org/wiki/' + n,\n",
+      "        \t'categories': categs, 'outlinks': outlinks,'sections': sections,\n",
+      "        \t'references': refs, 'imageurl': imageurl})  #'content': content,\n",
+      "\n",
       "    except wikipedia.exceptions.DisambiguationError as e: #if reach this, they aren't on wikipedia\n",
       "        #print e.options \n",
       "#         print p + \" no wiki\"\n",
@@ -82,9 +86,9 @@
       "#       print p + \" no wiki\"\n",
       "        pass\n",
       "\n",
-      "with open(p + '-wiki.yaml', 'w') as outfile:\n",
-      "    outfile.write( yaml.dump(data, default_flow_style=False) )\n",
-      "    print \"finished!\"\n"
+      "with open('wiki-data.yaml', 'w') as outfile:\n",
+      "\toutfile.write( yaml.dump(data, default_flow_style=False) )\n",
+      "\tprint \"finished!\""
      ],
      "language": "python",
      "metadata": {},
@@ -93,51 +97,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "84\n",
-        "hereeee!"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "finished!\n"
        ]
       }
      ],
-     "prompt_number": 403
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 407
     },
     {
      "cell_type": "code",
